@@ -304,6 +304,10 @@ void abs_linesChangeParameterForMatchingLines(ArrayOfLineRecord& abs_lines,
         parameter_switch = 3;
     else if(parameter_name == "Lower State Energy")
         parameter_switch = 4;
+    else if(parameter_name == "Pressure Broadening Self Exponent")
+        parameter_switch = 5;
+    else if(parameter_name == "Pressure Broadening Foreign Exponent")
+        parameter_switch = 6;
     
     ArrayOfIndex matches;
     ArrayOfQuantumMatchInfo match_info;
@@ -329,7 +333,7 @@ void abs_linesChangeParameterForMatchingLines(ArrayOfLineRecord& abs_lines,
     {
         
         // Skip if there are none in any of the levels
-        if(match_info[mii].Upper()==QMI_NONE||match_info[mii].Lower()==QMI_NONE)
+        if((match_info[mii].Upper()==QMI_NONE||match_info[mii].Lower()==QMI_NONE)&&loose_matching==0)
             continue;
         
         // Skip if there are any partials unless we accept loose matching
@@ -377,6 +381,22 @@ void abs_linesChangeParameterForMatchingLines(ArrayOfLineRecord& abs_lines,
                 else 
                     lr.SetElow(lr.Elow()*(1.0e0+change));
                 break;
+            case 5: //"Pressure Broadening Self":
+                pb = lr.PressureBroadening();
+                if(relative==0)
+                    pb.ChangeSelfExponent(change,this_species,h2o_index,broad_spec_locations);
+                else
+                    pb.ChangeSelfExponentRelative(change,this_species,h2o_index,broad_spec_locations);
+                lr.SetPressureBroadeningData(pb);
+                break;
+            case 6: //"Pressure Broadening Foreign":
+                pb = lr.PressureBroadening();
+                if(relative==0)
+                    pb.ChangeForeignExponent(change,broad_spec_locations);
+                else
+                    pb.ChangeForeignExponentRelative(change,broad_spec_locations);
+                lr.SetPressureBroadeningData(pb);
+                break;
             default:
             {
                 ostringstream os;
@@ -387,7 +407,118 @@ void abs_linesChangeParameterForMatchingLines(ArrayOfLineRecord& abs_lines,
             }
             
         }
-        break;
+    }
+    
+    if(!any)
+        throw std::runtime_error("You have no matches.  This is not accepted as a valid use case.  (Is your matching information correct?)\n");
+}
+
+
+/* Workspace method: Doxygen documentation will be auto-generated */
+void abs_linesSetParameterForMatchingLines(ArrayOfLineRecord& abs_lines, 
+                                           const ArrayOfArrayOfSpeciesTag& abs_species,
+                                           const QuantumIdentifier& QI, 
+                                           const String& parameter_name,
+                                           const Numeric& new_value,
+                                           const Index& loose_matching,
+                                           const Verbosity&)
+{
+    
+    Index parameter_switch = -1;
+    
+    if(parameter_name.nelem()==0)
+        throw std::runtime_error("parameter_name is empty.\n");
+    else if(parameter_name == "Central Frequency")
+        parameter_switch = 0;
+    else if(parameter_name == "Line Strength")
+        parameter_switch = 1;
+    else if(parameter_name == "Pressure Broadening Self")
+        parameter_switch = 2;
+    else if(parameter_name == "Pressure Broadening Foreign")
+        parameter_switch = 3;
+    else if(parameter_name == "Lower State Energy")
+        parameter_switch = 4;
+    else if(parameter_name == "Pressure Broadening Self Exponent")
+        parameter_switch = 5;
+    else if(parameter_name == "Pressure Broadening Foreign Exponent")
+        parameter_switch = 6;
+    
+    ArrayOfIndex matches;
+    ArrayOfQuantumMatchInfo match_info;
+    // Run internal mathcing routine
+    match_lines_by_quantum_identifier(matches, match_info, QI, abs_lines);
+    // We demand that things are formatted the right way and that there are not multiple matches.
+    if( matches.nelem()>1 && loose_matching == 0 )
+        throw std::runtime_error("Multiple matches in comparison.  You set loose_matching to not allow this!\n");
+    else if( matches.nelem()==0 )
+        throw std::runtime_error("No match found!  Make sure your QuantumIdentifier is in abs_lines before using this function.\n(For instance, try to make sure quantum numbers are defined the same way.)\n");
+    
+    // Broadening species
+    const Index this_species = find_first_species_tg( abs_species, QI.Species() );
+    ArrayOfIndex broad_spec_locations;
+    find_broad_spec_locations(broad_spec_locations, abs_species, this_species );
+    // Water index
+    const Index h2o_index = find_first_species_tg( abs_species, species_index_from_species_name("H2O") );
+    
+    bool any=false;
+    PressureBroadeningData pb;
+    
+    for(Index mii =0; mii<matches.nelem(); mii++)
+    {
+        // Skip if there are none in any of the levels
+        if((match_info[mii].Upper()==QMI_NONE||match_info[mii].Lower()==QMI_NONE)&&loose_matching==0)
+            continue;
+        
+        // Skip if there are any partials unless we accept loose matching
+        if((match_info[mii].Upper()==QMI_PARTIAL||match_info[mii].Lower()==QMI_PARTIAL)&&loose_matching==0)
+            continue;
+        
+        if(!any)
+            any = true;
+        
+        LineRecord& lr = abs_lines[matches[mii]];
+        
+        switch (parameter_switch)
+        {
+            case 0: //"Central Frequency":
+                lr.setF(new_value);
+                break;
+            case 1: //"Line Strength":
+                lr.setI0(new_value);
+                break;
+            case 2: //"Pressure Broadening Self":
+                pb = lr.PressureBroadening();
+                pb.SetSelf(new_value,this_species,h2o_index,broad_spec_locations);
+                lr.SetPressureBroadeningData(pb);
+                break;
+            case 3: //"Pressure Broadening Foreign":
+                pb = lr.PressureBroadening();
+                pb.SetForeign(new_value,broad_spec_locations);
+                lr.SetPressureBroadeningData(pb);
+                break;
+            case 4: //"Lower State Energy":
+                lr.SetElow(new_value);
+                break;
+            case 5: //"Pressure Broadening Self Exponent":
+                pb = lr.PressureBroadening();
+                pb.SetSelfExponent(new_value,this_species,h2o_index,broad_spec_locations);
+                lr.SetPressureBroadeningData(pb);
+                break;
+            case 6: //"Pressure Broadening Foreign Exponent":
+                pb = lr.PressureBroadening();
+                pb.SetForeignExponent(new_value,broad_spec_locations);
+                lr.SetPressureBroadeningData(pb);
+                break;
+            default:
+            {
+                ostringstream os;
+                os << "Usupported paramter_name\n" << parameter_name
+                << "\nSee method description for supported parameter names.\n";
+                throw std::runtime_error(os.str());
+                break;
+            }
+            
+        }
     }
     
     if(!any)
