@@ -765,7 +765,11 @@ void define_md_data_raw()
           "parameter_name = \"Line Strength\"\n"
           "parameter_name = \"Pressure Broadening Self\"\n"
           "parameter_name = \"Pressure Broadening Foreign\"\n"
+          "parameter_name = \"Pressure Broadening Self Exponent\"\n"
+          "parameter_name = \"Pressure Broadening Foreign Exponent\"\n"
           "parameter_name = \"Lower State Energy\"\n"
+          "\n"
+          "Note that loose_matching:=0 means only full matches are allowed\n"
       ),
       AUTHORS( "Richard Larsson" ),
       OUT( "abs_lines" ),
@@ -778,8 +782,33 @@ void define_md_data_raw()
       GIN_DEFAULT( NODEF, NODEF, NODEF, "0", "0" ),
       GIN_DESC( "Information to match the line.",
                 "Name of parameter to be replaced",
-                "Value with which to change",
+                "Value with which to change matching line{'s,s'}",
                 "Flag for relative change (0 is absolute change)",
+                "Flag for loose match (0 means only complete matches)"
+      )
+    ));
+    
+    md_data_raw.push_back
+    ( MdRecord
+    ( NAME( "abs_linesSetParameterForMatchingLines" ),
+      DESCRIPTION
+      (
+          "Same as *abs_linesChangeParameterForMatchingLines* but sets the parameter\n"
+          "instead of changing it.  See the other function for inputs but note that.\n"
+          "there are small differences in naming.\n"
+      ),
+      AUTHORS( "Richard Larsson" ),
+      OUT( "abs_lines" ),
+      GOUT(),
+      GOUT_TYPE(),
+      GOUT_DESC(),
+      IN( "abs_lines", "abs_species" ),
+      GIN( "QI", "parameter_name", "new_value", "loose_matching"),
+      GIN_TYPE( "QuantumIdentifier", "String", "Numeric",  "Index" ),
+      GIN_DEFAULT( NODEF, NODEF, NODEF, "0" ),
+      GIN_DESC( "Information to match the line.",
+                "Name of parameter to be replaced",
+                "New value of parameter for matching line(s)",
                 "Flag for loose match (0 means only complete matches)"
       )
     ));
